# mint-cairo

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
lib/: CMakeLists.txt
lib/cairo/: CMakeLists.txt  cairo.mn
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/cairo/: CMakeLists.txt  cairo.cpp
